Link Errors Fixed

--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -23,8 +23,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Corporate</span>
         <div class="cs-breadcrumbs">
-            <a href="index/" class="cs-link">Home</a>
-            <a href="corporate/" class="cs-link cs-active">Corporate</a>
+            <a href="/index/" class="cs-link">Home</a>
+            <a href="/corporate/" class="cs-link cs-active">Corporate</a>
         </div>
     </div>
     <!--Background Image-->
@@ -49,7 +49,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding_s_m.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding_s_2.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding_s_m.jpeg" alt="Photobooth Wedding" width="542" height="608">
+                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="Photobooth Wedding" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -97,7 +97,7 @@ eleventyNavigation:
             <p class="cs-text">
                We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
             </p>
-            <a href="contact/" class="cs-button-solid">Get Free Quote</a>
+            <a href="/contact/" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -115,7 +115,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Enhance your corporate event and elevate your brand presence with our 360 Photobooth. 
             </p>
-            <a href="booking/" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
