--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -1,7 +1,6 @@
 ---
 title: '360 Photobooth Gallery'
 description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
-preloadImg: '/assets/images/Hero.jpeg'
 permalink: '/Gallery/'
 eleventyNavigation:
   key: Gallery
@@ -29,7 +28,7 @@ eleventyNavigation:
         <div class="cs-gallery">
              <!--Picture 1-->
            <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(10).mp4.mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(10).mp4#t=0.2">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(10).mp4#t=0.2">
             </video>
@@ -110,8 +109,8 @@ eleventyNavigation:
                 <h2 class="cs-title">Witness the 360 Photobooth Experience in Action!</h2>
             </div>
             <div class="cs-button-box">
-                <a href="booking/" class="cs-button-solid">Book Now</a>
-                <a href="contact/" class="cs-button-transparent">Contact Us</a>
+                <a href="/booking/" class="cs-button-solid">Book Now</a>
+                <a href="/contact/" class="cs-button-transparent">Contact Us</a>
             </div>
         </div>
     </div>
