--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Toronto's Premier 360 Photobooth Experience"
 description: 'Capture unforgettable moments with our Toronto 360 Photo Booth. Step into an immersive experience where every angle is captured, creating stunning 360-degree photos. Book now and make your event truly memorable.'
-preloadImg: '/assets/images/Hero.jpeg'
+preloadImg: '/assets/images/Home/Hero.jpeg'
 permalink: '/'
 eleventyNavigation:
   key: Home
@@ -46,7 +46,7 @@ eleventyNavigation:
             <p class="cs-text">
                  Come Experiance Toronto's Premier PhotoBooth Experience. Last-Minute Bookings Available!
             </p>
-            <a href="booking/" class="cs-button-solid">Confirm Your Spot</a>
+            <a href="/booking/" class="cs-button-solid">Confirm Your Spot</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -99,7 +99,7 @@ eleventyNavigation:
             <p class="cs-text">
                 At Snap 'n Sweet, we pride ourselves on providing an exceptional 360 photobooth experience for all your events in Toronto and surrounding areas. Our mission is to create unforgettable memories and add a touch of magic to your special occasions, whether it's a corporate event, wedding, birthday party, or any other celebration.
             </p>
-            <a href="corporate/" class="cs-button-solid">Our Services</a>
+            <a href="/corporate/" class="cs-button-solid">Our Services</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -360,7 +360,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Are you ready to create unforgettable memories at your upcoming event? Look no further! Schedule Your Event Experience with us Today.
             </p>
-            <a href="booking/" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
@@ -464,7 +464,7 @@ eleventyNavigation:
                 </div>
             </li>
         </ul>
-        <a href="blog/" class="cs-button-solid">Our Blogs</a>
+        <a href="/blog/" class="cs-button-solid">Our Blogs</a>
     </div>
 </section>
     
