--- a/src/content/pages/Weddings.html
+++ b/src/content/pages/Weddings.html
@@ -24,8 +24,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Weddings</span>
         <div class="cs-breadcrumbs">
-            <a href="index/" class="cs-link">Home</a>
-            <a href="weddings/" class="cs-link cs-active">Weddings</a>
+            <a href="/index/" class="cs-link">Home</a>
+            <a href="/weddings/" class="cs-link cs-active">Weddings</a>
         </div>
     </div>
     <!--Background Image-->
@@ -98,7 +98,7 @@ eleventyNavigation:
             <p class="cs-text">
                We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
             </p>
-            <a href="contact/" class="cs-button-solid">Get Free Quote</a>
+            <a href="/contact/" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -116,7 +116,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Let's make your wedding day even more special with the enchanting touch of our 360 photobooth
             </p>
-            <a href="booking/" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
