--- a/src/content/pages/Booking.html
+++ b/src/content/pages/Booking.html
@@ -1,6 +1,6 @@
 ---
 title: 'Booking'
-description: "Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet."
+description: "Reach out to Snap N Sweet for inquiries, bookings, and personalized event experiences. Contact us to discuss how our 360 photobooth services can elevate your special occasions. Our team is ready to assist you in creating memorable moments, custom setups, and immersive event entertainment. Get in touch with Snap N Sweet today."
 permalink: '/Booking/'
 eleventyNavigation:
   key: Booking
