--- a/src/index.html
+++ b/src/index.html
@@ -397,7 +397,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                         In the ever-evolving landscape of corporate events, engaging and interactive experiences have become paramount to leave a lasting impression on attendees
                     </p>
-                    <a href="/blog/elevating-corporate-events-with-interactive-branding" class="cs-link">
+                    <a href="https://snapnsweet.ca/blog/elevating-corporate-events-with-interactive-branding/" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -417,7 +417,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                        While traditional photo booths have been a staple at gatherings, a new trend is taking the spotlight – the 360 photo booth. 
                     </p>
-                    <a href="blog/exploring-the-magic-of-a-360-photo-booth" class="cs-link">
+                    <a href="https://snapnsweet.ca/blog/exploring-the-magic-of-a-360-photo-booth/" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -437,7 +437,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                         Let's explore how bringing a 360 photo booth to your Toronto event can add an extra dimension of fun and engagement, making it an unforgettable experience for all.
                     </p>
-                    <a href="blog/bringing-your-toronto-event-to-life-with-a-360-photo-booth-rental" class="cs-link">
+                    <a href="https://snapnsweet.ca/blog/bringing-your-toronto-event-to-life-with-a-360-photo-booth-rental/" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -457,7 +457,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                          From brand exposure and lead generation to social media reach, photobooth marketing unleashes the full potential of experiential marketing.
                     </p>
-                    <a href="blog/unleashing-the-power-of-photobooth-marketing" class="cs-link">
+                    <a href="https://snapnsweet.ca/blog/unleashing-the-power-of-photobooth-marketing/" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
