--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -46,10 +46,10 @@ eleventyNavigation:
             <!--Top left image-->
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding_s_m.jpg">
+                <source media="(max-width: 600px)" srcset="/assets/images/About/Depositphotos_221000152_XL.jpg">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding_s_2.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="Photobooth Wedding" width="542" height="608">
+                <source media="(min-width: 601px)" srcset="/assets/images/About/Depositphotos_221000152_XL.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/About/Depositphotos_221000152_XL.jpg" alt="Photobooth Wedding" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -60,7 +60,7 @@ eleventyNavigation:
             <span class="cs-topper">Corporate Photobooth Services</span>
             <h2 class="cs-title">Elevate Your Corporate Event with Our 360 Photobooth Experience</h2>
             <p class="cs-text">
-              Congratulations on your upcoming wedding! At Snap 'N Sweet, we understand the importance of making your big day extraordinary and unforgettable. Our 360 photobooth services are designed to add an extra touch of magic to your wedding celebration, capturing the essence of love, joy, and cherished moments with your loved ones.
+              Greetings on your upcoming corporate event! At Snap 'N Sweet, we recognize the significance of creating an exceptional and memorable experience for your business gathering. Our corporate 360 photobooth services are meticulously crafted to elevate your event, encapsulating professionalism, engagement, and valuable interactions.
             </p>
             <ul class="cs-list">
                 <li class="cs-li">Professional Branding</li>
@@ -92,10 +92,10 @@ eleventyNavigation:
             <span class="cs-topper">Why Us</span>
             <h2 class="cs-title">Choose Our 360 Photobooth for Corporate Events</h2>
             <p class="cs-text">
-               Imagine the laughter and smiles as your guests interact with our cutting-edge 360 photobooth. From intimate shots with family to hilarious poses with friends, our photobooth creates heartwarming memories that will be cherished for years to come. The captivating visual storytelling complements your wedding photographer's work, providing a unique keepsake for all.
+               Picture the atmosphere abuzz with excitement as your attendees engage with our state-of-the-art 360 photobooth. From candid shots capturing the camaraderie among colleagues to creatively posed group pictures, our photobooth ignites laughter and camaraderie, leaving a lasting impression that resonates long after your corporate event ends. This captivating visual narrative becomes a cherished addition to the event's memory, perfectly complementing the professional coverage by event photographers.
             </p>
             <p class="cs-text">
-               We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
+              Our corporate services offer a range of adaptable package options tailored to your event's size and character. Whether orchestrating an intimate seminar or orchestrating a grand conference, our diverse packages cater to your preferences and financial considerations. From concise hourly packages to all-encompassing full-day rentals, our offerings align seamlessly with your corporate event timeline, ensuring a seamless and memorable experience.
             </p>
             <a href="/contact/" class="cs-button-solid">Get Free Quote</a>
         </div>
