--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,7 +1,7 @@
 ---
 title: '360 Photobooth Blogs'
 description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/ImgBlog/Screenshot 2023-08-23 193725.jpg'
 permalink: '/blog/'
 eleventyNavigation:
     key: Blog
@@ -24,9 +24,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Blog</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/ImgBlog/Screenshot 2023-08-23 193725.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/ImgBlog/Screenshot 2023-08-23 193725.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/ImgBlog/Screenshot 2023-08-23 193725.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
