--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -7,7 +7,7 @@ eleventyNavigation:
   order: 200
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base6.html" %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/reviews.css">
