--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,7 @@ eleventyNavigation:
     </picture>
 </section>
 
+
 <!-- ============================================ -->
 <!--                  Services                    -->
 <!-- ============================================ -->
@@ -129,6 +130,25 @@ eleventyNavigation:
         </ul>
     </div>
 </section>
+
+<!-- ============================================ -->
+<!--                   Logos                      -->
+<!-- ============================================ -->
+
+<section id="logos-857">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">Our Partners</h2>
+        </div>
+        <div class="cs-logo-group">
+            <!--Ideally you want to use svg's for the file path image, which is why these aren't wrapped in picture elements for different screen sizes-->
+          
+            <img class="cs-logo" src="/assets/images/Home/TNWSBG.png" alt="logo" width="150" height="55" loading="lazy" decoding="async">
+            <img class="cs-logo" src="/assets/images/Home/Vaughn_Logobg.png" alt="logo" width="150" height="53" loading="lazy" decoding="async">
+        </div>
+    </div>
+</section>
+                                
 
 
 <!-- ============================================ -->
