--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@ eleventyNavigation:
                 <source media="(min-width: 601px)" srcset="/assets/images/Home/Picture21.png">
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Picture21.png" alt="Nightime Party" width="345" height="345">
             </picture>
-           <video controls class="cs-picture cs-picture2"  preload="metadata">
+           <video controls muted class="cs-picture cs-picture2"  preload="metadata">
                 <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(2).mp4#t=0.2">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(2).mp4#t=0.2">
@@ -181,7 +181,7 @@ eleventyNavigation:
                 <source media="(min-width: 601px)" srcset="/assets/images/Home/Photobooth.jpeg">
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Photobooth.jpeg" alt="Photobooth" width="345" height="345">
             </picture>
-             <video controls class="cs-picture cs-picture4"  preload="metadata">
+             <video controls muted class="cs-picture cs-picture4"  preload="metadata">
                 <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(5).mp4#t=0.2">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(5).mp4#t=0.2">
@@ -200,7 +200,7 @@ eleventyNavigation:
                 <source media="(min-width: 601px)" srcset="/assets/images/Home/Party.jpeg">
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Party.jpeg" alt="Girl Photobooth" width="345" height="345">
             </picture>
-            <video controls class="cs-picture cs-picture7"  preload="metadata">
+            <video controls muted class="cs-picture cs-picture7"  preload="metadata">
                 <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(4).mp4#t=0.2">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(4).mp4#t=0.2" width="345" height="345">
